fixed card align , changed search bar styling

--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ main {
   padding: 0.5rem;
   border: 0;
   background-color: var(--HEADBGCOLOR);
-  background-image: linear-gradient(to right, var(--HEADBGCOLOR), #8298b9);
+  
   border-radius: 1rem 0 0 1rem;
   color: white;
   padding-left: 1rem;
@@ -77,7 +77,7 @@ main {
   border: 0;
   border-radius: 0 1rem 1rem 0;
   color: white;
-  background-color: var(--HEADBGCOLOR);
+  background-color:#8298b9;
   cursor: pointer;
 }
 
@@ -114,7 +114,7 @@ main {
 
 .sec3 {
   width: 90%;
-  margin: 2rem;
+  margin: 2rem auto;
   background-color: #21395a;
   padding: 3rem;
   display: flex;
